--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
 
     <provider
       android:name="androidx.core.content.FileProvider"
-      android:authorities="com.lookie.camerafilterrealtime.provider"
+      android:authorities="${applicationId}.provider"
       android:exported="false"
       android:grantUriPermissions="true">
       <meta-data
